--- a/1. Website SolarCamp/styles.css
+++ b/1. Website SolarCamp/styles.css
@@ -48,7 +48,6 @@
 }
 
 body {
-    font-family: 'Times New Roman';
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -58,19 +57,25 @@ body {
 }
 
 header {
-    font-family: 'Times New Roman';  
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--d-c-white);
+    background-color: white;
     margin: 1px;
     padding: 10px;
 }
 header p {
-    font-family: 'Times New Roman';    
-    font-size: 2.0em;
+    font-size: 1.6em;
     margin: 1px;
-    padding: 10px;
+    padding: 10px 50px;
+}
+header a {
+    font-size: 1.0em;
+    text-decoration: none;
+    color: #426B1F;
+}
+header a:hover {
+    color: darkgreen;
 }
 header nav {
     display: flex;
@@ -78,7 +83,8 @@ header nav {
     align-items: center;
 }
 header nav a {
-    margin: 0px 10px;
+    font-size: 1.0em;
+    margin: 0px 25px;
     text-decoration: none;
     color: #333;
 }
@@ -88,6 +94,7 @@ header nav a:hover {
 header #basket {
     background-color: darkgreen;
     color: white;
+    font-weight: bold;
     padding: 5px 10px;
     border-radius: 5px;
 }
@@ -98,7 +105,7 @@ header #basket:hover {
 
 #quote {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 #quote em {
@@ -106,6 +113,7 @@ header #basket:hover {
 }
 
 #browse-button {
+    font-size: 1.0em;
     display: inline-block;
     margin: 20px auto;
     padding: 10px 20px;
