--- a/1. Website SolarCamp/styles.css
+++ b/1. Website SolarCamp/styles.css
@@ -47,6 +47,8 @@
 
 }
 
+/*-----------------------------------------------------------------*/
+
 body {
     display: flex;
     flex-direction: column;
@@ -56,41 +58,39 @@ body {
     padding: 0;
 }
 
+/*-----------------------------------------------------------------*/
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px;
     padding: 10px 20px;
 }
-
-header #home-button {
+header .logo {
     font-size: 2em;
     text-decoration: none;
     color: black;
-    margin: 0px;
     padding: 15px 25px;
 }
-header #home-button:hover {
+header .logo:hover {
     color: #426B1F;
     transition: color 250ms ease-in 25ms;
 }
-
 header nav {
     display: flex;
     align-items: center;
 }
-header #normal-button {
+header .nav-button {
     color: black;
     font-size: 1.5em;
     text-decoration: none;
     margin: 10px 30px;
 }
-header #normal-button:hover {
+header .nav-button:hover {
     color: darkgreen;
     transition: color 250ms ease-in 25ms;
 }
-header #basket-button {
+header .basket-button {
     background-color: darkgreen;
     color: white;
     font-size: 2em;
@@ -100,23 +100,19 @@ header #basket-button {
     border-radius: 5px;
 }
 
-#solarcamp-pagebreak {
+/*-----------------------------------------------------------------*/
+
+#solarcamp-introduction-section {
     text-align: center;
-}
-#solarcamp-title {
-    font-size: 3em;
-    padding-top: 10px;
-    border-top: 1px solid white;
+    margin-bottom: 50px;
 }
 #solarcamp-quote {
     font-size: 3em;
     margin-left: 20px;
     margin-right: 20px;
 }
-
-#browse-button {
+.browse-button {
     font-size: 1.5em;
-    margin: 20px auto;
     padding: 10px 20px;
     background-color: darkgreen;
     color: white;
@@ -124,39 +120,52 @@ header #basket-button {
     border-radius: 5px;
 }
 
+/*-----------------------------------------------------------------*/
+
 #camping-images-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+.vertical-image-container{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: right;
+}
+.horizontal-image-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+}
+
+.image-container img {
+    max-width: 100%;
+    max-height: 400px;
+}
 .image-container {
-    margin-top: 150px;
+    margin-top: 100px;
     text-align: center;
 }
 
-#vogue-vegetables-image {
-    transform: rotate(90deg);
-    width: 750px;
-}
-#vogue-vegetables-image-quote {
-    margin-top: 80px;
-    font-style: normal;
+/*-----------------------------------------------------------------*/
+
+#solarcamp-title-pagebreak {
+    text-align: center;
+    font-size: 3em;
 }
 
-#vogue-camping-image {
-    width: 775px;
-}
-#vogue-camping-image-quote {
-    margin-top: 5px;
-    font-style: normal;
-}
+/*-----------------------------------------------------------------*/
 
-#camping-paragraphs-container {
+#camping-paragraph-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.paragraph-container{
+.paragraph{
     display: flex;
     font-style: italic;
     font-size: 1.1em;
