--- a/1. Website SolarCamp/styles.css
+++ b/1. Website SolarCamp/styles.css
@@ -174,3 +174,39 @@ header .basket-button {
     margin-left: 30px;
     margin-right: 30px;
 }
+
+/*-----------------------------------------------------------------*/
+
+form {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4caf50;
+    color: #ffffff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
